--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
-<script type="text/javascript"> THREEx.ArToolkitContext.baseURL = "https://rawgit.com/jeromeetienne/AR.js/master/three.js"</script>
+<script type="text/javascript"> THREEx.ArToolkitContext.baseURL = "https://rawgit.com/jeromeetienne/ar.js/master/three.js"</script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-sphere position='0 0.5 0' color='blue'></a-sphere>
